--- a/.github/workflows/vercel-preview.yml
+++ b/.github/workflows/vercel-preview.yml
@@ -1,3 +1,18 @@
-- name: Vercel Preview Deployments
-  uses: snaplet/vercel-action@v3.0.1
-  
+name: Vercel Preview Deployments
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Deploy to Vercel
+        uses: snaplet/vercel-action@v3.0.1
+        with:
+          token: ${{ secrets.VERCEL_TOKEN }}
